--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,220 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Varela+Round:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue');
+@import url('https://fonts.googleapis.com/css?family=Tomorrow');
+
+
+
+body {
+  font-family: "Open Sans", serif;
+  background: url("img/background.jpg");
+  background-size: cover;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-row-gap: 40px;
+  grid-column-gap: 20px;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
-
-.App-logo {
-  height: 40vmin;
+.country{
+  font-family: 'Bebas Neue';
+  color: #ffffff;
+  font-size: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
+  align-items: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.timenow{
+  font-size: 40px;
+  color: #fff;
+}
+.temperature_now{
+  font-size: 60px;
+  color: #fff;
+  font-weight: 600;
+  font-family: 'Tomorrow',sans-serif;
+}
+.temp-2{
+  height: auto;
+  background: url("img/img2.png") center center no-repeat;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  border-radius: 25px;
+}
+.temp-1{
+  height: auto;
+  background: url("img/bg1.jpg") center center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  
+
 }
 
-.App-link {
-  color: #09d3ac;
+.temp-3{
+  height: auto;
+  background: url("img/img2.jpg") center center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+}
+.temp-4{
+  height: auto;
+  background: url("img/img3.jpg") center center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+}
+.temp_title{
+  font-size: 45px;
+  font-family: 'Varela Round', serif;
+  color: #fff;
+  font-weight: 550;
+  text-align: center;
+}
+.temp_date{
+  color: #ffffff;
+  padding: 10px 0 60px 0;
+  font-size: 20x;
+  font-weight:10 ;
+  font-family: 'Montserrat';
+}
+
+.weather__condition{
+  color: #ffffff;
+  padding: 20px 0 20px 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+.title-container__title {
+  font-size: 50px;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  font-family: 'Roboto Slab', serif;
+}
+
+.title-container__subtitle {
+  font-style: italic;
+  font-weight: 100;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  font-family: "Merriweather", serif;
+}
+
+.form-container {
+  background-color: #2c3e50;
+  height: 90vh;
+  padding-top: 100px;
+  padding-left: 50px;
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1px #f16051;
+  width: 30%;
+  padding-bottom: 4px;
+  color: #fff !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+input[type="text"] { 
+    outline: none;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+    -webkit-text-fill-color: #fff !important;
+}
+
+button {
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #f16051;
+  color: #fff;
+  font-weight: 100;
+}
+
+button:active {
+  outline: none;
+}
+
+.weather__info {
+  width: 60%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+.weather__key {
+  color: #ffffff;
+  font-weight: 200;
+  font-family: "Verala Round", serif;
+  font-size: 30px;
+}
+.wind_speed{
+  color: #ffffff;
+  font-family: "Verala Round", serif;
+  font-weight: 100;
+  font-size: 20px;
+  
+}
+.weather__temp{
+  color: #faf741;
+  font-size: 50px;
+  font-weight: 500;
+}
+.weather__key:last-child {
+  border: 0;
+}
+
+.weather__value {
+  color: #fff;
+  font-weight: 200;
+}
+.form{
+  text-align: center;
+}
+.weather__error {
+  color: #ffffff;
+  font-size: 40px;
+  font-family: "Tomorrow",sans-serif;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 200;
 }
